--- a/index.html
+++ b/index.html
@@ -2,91 +2,170 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Responsive Landing Page Template With Flexbox</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>(Net)working with Cisco</title>
+	<link href="img/company_logo.ico" rel="icon"/>
     <link rel="stylesheet" href="css/styles.css">
-
+	
 </head>
 
 <body>
-
+	
 	<header>
-		<h2><a href="#">Website Logo</a></h2>
+		<a href="https://schlingeldomi.github.io/">
+			<img class="logo" src="img/company_logo.png" alt="Company Logo">
+		</a>
 		<nav>
 			<li><a href="#">Home</a></li>
-			<li><a href="#">Ideen</a></li>
-			<li><a href="#">Profil</a></li>
-			<li><a href="#">Kontakt</a></li>
+			<li><a href="">Sign in</a></li>
+			<li><a href="#contact">Contact</a></li>
 		</nav>
+	
 	</header>
-
-
-	<section class="hero">
-		<div class="background-image" style="background-image: url(img/island.jpg);"></div>
-		<h1>Responsive Flexbox Template</h1>
-		<h3>Projektarbeit für IET12 in Internet Technologie.</h3>
-	</section>
-
-
-	<section class="our-work">
-		<h3 class="title">Some of our work</h3>
-		<p> Irgendein Text</p>
-		<hr>
-
-		<ul class="grid">
-			<li class="small" style="background-image: url(img/tastatur.jpg);"></li>
-			<li class="large" style="background-image: url(img/tastatur1.jpg);"></li>
-			<li class="large" style="background-image: url(img/Man.jpg);"></li>
-			<li class="small" style="background-image: url(img/netzwerk.jpg);"></li>
+	
+	<section>
+		<h1>Cisco Catalyst 3650 Series Switches</h1>
+		<div class="modelsum">
+			<a title="3D-Ansicht in neuem Tab öffnen" href="https://apps.kaonadn.net/4357027/product.html#15/1554;:" target="_blank">
+				<img class="modelpic" src="img/sw_cat3650.jpg" alt="Model C3650">
+			</a>
+			<div class="modeldescr">
+				<h4>Product Overview</h4>
+				<ul>
+					<li>24 and 48 10/100/1000 data port models</li>
+					<li>Software support for IPv4 and IPv6 routing, multicast routing, modular QoS</li>
+					<li>Single universal Cisco IOS® Software image across all license levels, providing an easy upgrade path for software features</li>
+					<li>Full IEEE 802.3at (PoE+) with 30W power on all ports in 1 rack unit (RU) form factor</li>
+					<li>Dual redundant, modular power supplies and three modular fans providing redundancy</li>
+					<li>Five fixed-uplink models with four Gigabit Ethernet, two 10 Gigabit Ethernet, four 10 Gigabit Ethernet, eight 10 Gigabit Ethernet, or two 40 Gigabit Ethernet Quad Small Form-Factor Pluggable Plus (QSFP+) ports</li>
+					<li>24-port and 48-port 10/100/1000 PoE+ models with lower noise and reduced depth of 11.62 inches for shallow depth cabinets in enterprise, retail, and branch-office environments</li>
+					<li>Optional Cisco StackWise-160 technology that provides scalability and resiliency with 160 Gbps of stack throughput</li>
+				</ul>
+			</div>
+		</div>
+		
+		<div class="modeldescr">
+			<h4>Fixed Uplinks</h4>
+			<p>All Cisco Catalyst 3650 Series Switches have fixed, built-in uplink ports. Customers can choose from five types of uplink ports at the time of the switch purchase:</p>
+			<ul>
+				<li>Four Gigabit Ethernet with Small Form-Factor Pluggable (SFP)</li>
+				<li>Two 10 Gigabit Ethernet with SFP+ and two 10 Gigabit Ethernet with SFP or four Gigabit Ethernet with SFP</li>
+				<li>Four 10 Gigabit Ethernet with SFP+ or four Gigabit Ethernet with SFP</li>
+				<li>Eight 10 Gigabit Ethernet with SFP+ or eight Gigabit Ethernet with SFP</li>
+				<li>Two 40 Gigabit Ethernet with QSFP+</li>
+			</ul>
+			<p><strong>Notice:</strong> The SFP+ interface supports both 10 Gigabit Ethernet and Gigabit Ethernet ports.</p>
 		</div>
 	</section>
 	
-
-	<section class="features">
-		<h3 class="title">Features and services</h3>
-		<p> Hier sind die Fotos.</p>
-		<hr>
-
+	<hr>
+	
+	<section>
+		<h2>Compare Cisco Catalyst 3650 Series models</h2>
 		<ul class="grid">
-			<li>
-				<i class="fa fa-camera-retro"></i>
-				<h4>Photography</h4>
-				<p>Fotos von einigen Themen.</p>
+			<li class="grid-item">
+				<h4>3650-24PDM</h4>
+				<ul>
+					<li>2 x 10 Gigabit Ethernet with SFP+ uplinks</li>
+					<li>24 POE+ ports</li>
+					<li>Fixed 640 WAC default AC power supply</li>
+					<li>390W available PoE power</li>
+				</ul>
 			</li>
-			<li>
-				<i class="fa fa-cubes"></i>
-				<h4>Web Development</h4>
-				<p> Netzwerke um mehr.</p>
+			<li class="grid-item">
+				<h4>3650-48FQM</h4>
+				<ul>
+					<li>48 10M/100M/1000M ports</li>
+					<li>12-in. deep mini switch for tight spaces</li>
+					<li>Quiet, ideal for office areas</li>
+					<li>Fixed fans and fixed power supplies</li>
+				</ul>
 			</li>
-			<li>
-				<i class="fa fa-newspaper-o"></i>
-				<h4>Content Editing</h4>
-				<p>Inhalte editieren.</p>
+			<li class="grid-item">
+				<h4>3650-48FQ</h4>
+				<ul>
+					<li>4 x 10 Gigabit Ethernet with SFP+ uplinks</li>
+					<li>48 PoE+ ports</li>
+					<li>1025 WAC default AC power supply</li>
+					<li>775W available PoE power</li>
+				</ul>
 			</li>
-		</div>
-	</section>
-
-
-	<section class="reviews">
-		<h3 class="title">What others say:</h3>
-
-		<p class="quote"> Das Leben ist wie eine Schachtel Pralinen, man weiß nie, was man bekommt</p>
-		<p class="author">— Forrest Gump</p>
-
-		<p class="quote">Wenn ich mein Leben noch einmal leben könnte, würde ich die gleichen Fehler machen. Aber ein bisschen früher, damit ich mehr davon habe.</p>
-		<p class="author">— Marlene Dietrich</p>
-
-		<p class="quote">Es gibt Wichtigeres im Leben, als beständig dessen Geschwindigkeit zu erhöhen.</p>
-		<p class="author">— Mahatma Gandi</p>
-
+			<li class="grid-item">
+				<h4>3650-24PD</h4>
+				<ul>
+					<li>2 x 10 Gigabit Ethernet with SFP+ uplinks</li>
+					<li>24 PoE+ ports</li>
+					<li>640 WAC default AC power supply</li>
+					<li>390W available PoE power</li>					
+				</ul>
+			</li>
+			<li class="grid-item">
+				<h4>3650-8X24UQ</h4>
+				<ul>
+					<li>4 x 10 Gigabit Ethernet with SFP+ uplinks</li>
+					<li>24 UPOE ports</li>
+					<li>1100 WAC default AC power supply</li>
+					<li>Supports Catalyst Multitgigabit technology</li>
+				</ul>
+			<li class="grid-item">
+				<h4>3650-12X48UR</h4>
+				<ul>
+					<li>8 x 10 Gigabit Ethernet with SFP+ uplinks</li>
+					<li>48 UPOE ports</li>
+					<li>1100 WAC default AC power supply</li>
+					<li>Supports Cisco Catalyst Multitgigabit technology</li>
+				</ul>
+			</li>
+			<li class="grid-item">
+				<h4>3650-12X48UQ</h4>
+				<ul>
+					<li>4 x 10 Gigabit Ethernet with SFP+ uplinks</li>
+					<li>48 UPOE ports</li>
+					<li>1100 WAC default AC power supply</li>
+					<li>Supports Catalyst Multitgigabit technology</li>
+				</ul>
+			</li>
+			<li class="grid-item">
+				<h4>3650-12X48UZ</h4>
+				<ul>
+					<li>2 x 40 Gigabit Ethernet with QSFP+ Uplinks</li>
+					<li>48 UPOE ports</li>
+					<li>1100 WAC default AC power supply</li>
+					<li>Supports Catalyst Multitgigabit technology</li>
+				
+				</ul>
+			</li>
+		</ul>
 		
 	</section>
-
+	
+	<hr>
+	
+	<section id="contact">
+		<h2>Contact details:</h2>
+		<div class="contactdetails">
+		<div class="other">
+			<p>Concerning requests for proposal, please send us an <a href="mailto:domi@schlingel.net">email</a>.</p>
+			<p>For other issues call us on +49 123978420.</p>
+			<p>Or visit us on:</p>
+		</div>
+		<div class="address">
+			<h4>Headquarters' address</h4>
+			<p>Schlingel AG</p>
+			<p>Dominik Schlingel</p>
+			<p>Networking Street 18</p>
+			<p>2960 IT-City</p>
+		</div>
+		</div>
+	</section>
+	
+	
 	<footer>
-			<p> Projektarbeit der Technikerschule Erlangen </p>
+		<p>Projektarbeit im Fach Internettechnolgie 2018</p>
+		<p>(c) Dominik Wunner Technikerschule Erlangen</p>
+		
 	</footer>
-
+	
 </body>
 
 </html>
