--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>(Net)working with Cisco</title>
-	<link href="img/company_logo.ico" rel="icon"/>
+	<link href="/img/company_logo.ico" rel="icon"/>
     <link rel="stylesheet" href="/css/styles.css">
 	
 </head>
