--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>(Net)working with Cisco</title>
 	<link href="img/company_logo.ico" rel="icon"/>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 	
 </head>
 
@@ -144,10 +144,11 @@
 	<section id="contact">
 		<h2>Contact details:</h2>
 		<div class="contactdetails">
-		<div class="other">
+		<div class="contactissues">
 			<p>Concerning requests for proposal, please send us an <a href="mailto:domi@schlingel.net">email</a>.</p>
 			<p>For other issues call us on +49 123978420.</p>
-			<p>Or visit us on:</p>
+			<br><p class="socialtext">Or visit us on:</p>
+			<img src="img/social-icons.svg" rel="socialicons">
 		</div>
 		<div class="address">
 			<h4>Headquarters' address</h4>
@@ -162,7 +163,7 @@
 	
 	<footer>
 		<p>Projektarbeit im Fach Internettechnolgie 2018</p>
-		<p>(c) Dominik Wunner Technikerschule Erlangen</p>
+		<p>(c) Dominik W. Technikerschule Erlangen</p>
 		
 	</footer>
 	
