--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 			<p>Concerning requests for proposal, please send us an <a href="mailto:domi@schlingel.net">email</a>.</p>
 			<p>For other issues call us on +49 123978420.</p>
 			<br><p class="socialtext">Or visit us on:</p>
-			<img src="img/social-icons.svg" rel="socialicons">
+			<img src="img/social-icons.bmp" rel="socialicons">
 		</div>
 		<div class="address">
 			<h4>Headquarters' address</h4>
