--- a/index.html
+++ b/index.html
@@ -144,19 +144,19 @@
 	<section id="contact">
 		<h2>Contact details:</h2>
 		<div class="contactdetails">
-		<div class="contactissues">
-			<p>Concerning requests for proposal, please send us an <a href="mailto:domi@schlingel.net">email</a>.</p>
-			<p>For other issues call us on +49 123978420.</p>
-			<br><p class="socialtext">Or visit us on:</p>
-			<img src="img/social-icons.bmp" rel="socialicons">
-		</div>
-		<div class="address">
-			<h4>Headquarters' address</h4>
-			<p>Schlingel AG</p>
-			<p>Dominik Schlingel</p>
-			<p>Networking Street 18</p>
-			<p>2960 IT-City</p>
-		</div>
+			<div class="contactissues">
+				<p>Concerning requests for proposal, please send us an <a href="mailto:domi@schlingel.net">email</a>.</p>
+				<p>For other issues call us on +49 123978420.</p>
+				<br><p class="socialtext">Or visit us on:</p>
+				<img src="img/social-icons.bmp" alt="socialicons">
+			</div>
+			<div class="address">
+				<h4>Headquarters' address</h4>
+				<p>Schlingel AG</p>
+				<p>Dominik Schlingel</p>
+				<p>Networking Street 18</p>
+				<p>2960 IT-City</p>
+			</div>
 		</div>
 	</section>
 	
