--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<img class="logo" src="img/company_logo.png" alt="Company Logo">
 		</a>
 		<nav>
-			<a href="#">Home</a>
+			<a href="#">Home2</a>
 			<a onclick="signin()" href="">Sign in</a>
 			<a href="#contact">Contact</a>
 		</nav>
